# Rune

./: .env.example  .gitignore  README.md  devguide.md  package-lock.json  package.json  requirements.txt  vercel.json
api/: index.py  requirements.txt
apps/api/: package.json  pyproject.toml  rune.db
apps/api/scripts/: add_fks.py  add_publish_col.py  add_publish_id_col.py  clean_db.py
apps/api/scripts/seal-policy/: Move.toml  Published.toml  README.md
apps/api/scripts/seal-policy/sources/: policy.move
apps/api/server/: app.py  config.py  database.py
apps/api/server/handlers/: __init__.py  auth.py  data.py  seal.py  walrus.py
apps/api/server/models/: __init__.py  db.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css  main.tsx
apps/web/src/components/: ConfigInitializer.tsx  Header.css  Header.tsx  Navbar.css  Navbar.tsx  SettingsModal.css  SettingsModal.tsx  WalletLogin.tsx  WalletRelinker.tsx
apps/web/src/context/: wallet.ts
apps/web/src/hooks/: useBalances.ts
apps/web/src/lib/: api.ts  auth-helper.ts  encrypted-storage.ts  forms.ts  network.ts  seal.ts  wallet.ts  walrus.ts  zklogin.ts
apps/web/src/pages/: AppPage.css  AppPage.tsx  AuthCallback.tsx  Builder.css  Builder.tsx  BuilderModal.tsx  Dashboard.css  Dashboard.tsx  FormViewer.css  FormViewer.tsx  Home.css  Home.tsx
apps/web/src/stores/: config.ts  profile.ts
apps/web/src/types/: form.ts
scripts/: check-env.mjs  check-env.ts
